@@ -1,5 +1,7 @@
 package io.ipfs.api;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.ipfs.cid.*;
 import io.ipfs.multibase.*;
 import io.ipfs.multihash.Multihash;
@@ -15,10 +17,14 @@ import java.util.stream.*;
 
 public class IPFS {
 
+    private ObjectMapper mapper = new ObjectMapper();
+
     public static final Version MIN_VERSION = Version.parse("0.4.11");
+
     public enum PinType {all, direct, indirect, recursive}
-    public List<String> ObjectTemplates = Arrays.asList("unixfs-dir");
-    public List<String> ObjectPatchTypes = Arrays.asList("add-link", "rm-link", "set-data", "append-data");
+
+    public List<String> ObjectTemplates = List.of("unixfs-dir");
+    public List<String> ObjectPatchTypes = List.of("add-link", "rm-link", "set-data", "append-data");
     private static final int DEFAULT_CONNECT_TIMEOUT_MILLIS = 10_000;
     private static final int DEFAULT_READ_TIMEOUT_MILLIS = 60_000;
 
@@ -83,12 +89,13 @@ public class IPFS {
             if (detected.isBefore(MIN_VERSION))
                 throw new IllegalStateException("You need to use a more recent version of IPFS! >= " + MIN_VERSION);
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new IllegalStateException(e);
         }
     }
-    
+
     /**
      * Configure a HTTP client timeout
+     *
      * @param timeout (default 0: infinite timeout)
      * @return current IPFS object with configured timeout
      */
@@ -109,27 +116,19 @@ public class IPFS {
     }
 
     public List<MerkleNode> add(List<NamedStreamable> files, boolean wrap, boolean hashOnly) throws IOException {
-        Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "add?stream-channels=true&w="+wrap + "&n="+hashOnly, "UTF-8");
-        for (NamedStreamable file: files) {
+        Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "add?stream-channels=true&w=" + wrap + "&n=" + hashOnly, "UTF-8");
+        for (NamedStreamable file : files) {
             if (file.isDirectory()) {
                 m.addSubtree(Paths.get(""), file);
-            } else
-                m.addFilePart("file", Paths.get(""), file);
-        };
+            } else m.addFilePart("file", Paths.get(""), file);
+        }
         String res = m.finish();
-        return JSONParser.parseStream(res).stream()
-                .map(x -> MerkleNode.fromJSON((Map<String, Object>) x))
-                .collect(Collectors.toList());
+        return JSONParser.parseStream(res).stream().map(x -> MerkleNode.fromJSON((Map<String, Object>) x)).collect(Collectors.toList());
     }
 
     public List<MerkleNode> ls(Multihash hash) throws IOException {
         Map reply = retrieveMap("ls?arg=" + hash);
-        return ((List<Object>) reply.get("Objects"))
-                .stream()
-                .flatMap(x -> ((List<Object>)((Map) x).get("Links"))
-                        .stream()
-                        .map(MerkleNode::fromJSON))
-                .collect(Collectors.toList());
+        return ((List<Object>) reply.get("Objects")).stream().flatMap(x -> ((List<Object>) ((Map) x).get("Links")).stream().map(MerkleNode::fromJSON)).collect(Collectors.toList());
     }
 
     public byte[] cat(Multihash hash) throws IOException {
@@ -150,39 +149,30 @@ public class IPFS {
 
     public List<Multihash> refs(Multihash hash, boolean recursive) throws IOException {
         String jsonStream = new String(retrieve("refs?arg=" + hash + "&r=" + recursive));
-        return JSONParser.parseStream(jsonStream).stream()
-                .map(m -> (String) (((Map) m).get("Ref")))
-                .map(Cid::decode)
-                .collect(Collectors.toList());
+        return JSONParser.parseStream(jsonStream).stream().map(m -> (String) (((Map) m).get("Ref"))).map(Cid::decode).collect(Collectors.toList());
     }
 
     public Map resolve(String scheme, Multihash hash, boolean recursive) throws IOException {
-        return retrieveMap("resolve?arg=/" + scheme+"/"+hash +"&r="+recursive);
+        return retrieveMap("resolve?arg=/" + scheme + "/" + hash + "&r=" + recursive);
     }
 
 
     public String dns(String domain, boolean recursive) throws IOException {
         Map res = retrieveMap("dns?arg=" + domain + "&r=" + recursive);
-        return (String)res.get("Path");
+        return (String) res.get("Path");
     }
 
     public Map mount(java.io.File ipfsRoot, java.io.File ipnsRoot) throws IOException {
-        if (ipfsRoot != null && !ipfsRoot.exists())
-            ipfsRoot.mkdirs();
-        if (ipnsRoot != null && !ipnsRoot.exists())
-            ipnsRoot.mkdirs();
-        return (Map)retrieveAndParse("mount?arg=" + (ipfsRoot != null ? ipfsRoot.getPath() : "/ipfs" ) + "&arg=" +
-                (ipnsRoot != null ? ipnsRoot.getPath() : "/ipns" ));
+        if (ipfsRoot != null && !ipfsRoot.exists()) ipfsRoot.mkdirs();
+        if (ipnsRoot != null && !ipnsRoot.exists()) ipnsRoot.mkdirs();
+        return (Map) retrieveAndParse("mount?arg=" + (ipfsRoot != null ? ipfsRoot.getPath() : "/ipfs") + "&arg=" + (ipnsRoot != null ? ipnsRoot.getPath() : "/ipns"));
     }
 
     // level 2 commands
     public class Refs {
         public List<Multihash> local() throws IOException {
             String jsonStream = new String(retrieve("refs/local"));
-            return JSONParser.parseStream(jsonStream).stream()
-                    .map(m -> (String) (((Map) m).get("Ref")))
-                    .map(Cid::decode)
-                    .collect(Collectors.toList());
+            return JSONParser.parseStream(jsonStream).stream().map(m -> (String) (((Map) m).get("Ref"))).map(Cid::decode).collect(Collectors.toList());
         }
     }
 
@@ -190,10 +180,7 @@ public class IPFS {
      */
     public class Pin {
         public List<Multihash> add(Multihash hash) throws IOException {
-            return ((List<Object>)((Map)retrieveAndParse("pin/add?stream-channels=true&arg=" + hash)).get("Pins"))
-                    .stream()
-                    .map(x -> Cid.decode((String) x))
-                    .collect(Collectors.toList());
+            return ((List<Object>) ((Map) retrieveAndParse("pin/add?stream-channels=true&arg=" + hash)).get("Pins")).stream().map(x -> Cid.decode((String) x)).collect(Collectors.toList());
         }
 
         public Map<Multihash, Object> ls() throws IOException {
@@ -201,9 +188,7 @@ public class IPFS {
         }
 
         public Map<Multihash, Object> ls(PinType type) throws IOException {
-            return ((Map<String, Object>)(((Map)retrieveAndParse("pin/ls?stream-channels=true&t="+type.name())).get("Keys"))).entrySet()
-                    .stream()
-                    .collect(Collectors.toMap(x -> Cid.decode(x.getKey()), x-> x.getValue()));
+            return ((Map<String, Object>) (((Map) retrieveAndParse("pin/ls?stream-channels=true&t=" + type.name())).get("Keys"))).entrySet().stream().collect(Collectors.toMap(x -> Cid.decode(x.getKey()), x -> x.getValue()));
         }
 
         public List<Multihash> rm(Multihash hash) throws IOException {
@@ -216,10 +201,7 @@ public class IPFS {
         }
 
         public List<Multihash> update(Multihash existing, Multihash modified, boolean unpin) throws IOException {
-            return ((List<Object>)((Map)retrieveAndParse("pin/update?stream-channels=true&arg=" + existing + "&arg=" + modified + "&unpin=" + unpin)).get("Pins"))
-                    .stream()
-                    .map(x -> Cid.decode((String) x))
-                    .collect(Collectors.toList());
+            return ((List<Object>) ((Map) retrieveAndParse("pin/update?stream-channels=true&arg=" + existing + "&arg=" + modified + "&unpin=" + unpin)).get("Pins")).stream().map(x -> Cid.decode((String) x)).collect(Collectors.toList());
         }
     }
 
@@ -231,21 +213,15 @@ public class IPFS {
         }
 
         public List<KeyInfo> list() throws IOException {
-            return ((List<Object>)((Map)retrieveAndParse("key/list")).get("Keys"))
-                    .stream()
-                    .map(KeyInfo::fromJson)
-                    .collect(Collectors.toList());
+            return ((List<Object>) ((Map) retrieveAndParse("key/list")).get("Keys")).stream().map(KeyInfo::fromJson).toList();
         }
 
         public Object rename(String name, String newName) throws IOException {
-            return retrieveAndParse("key/rename?arg="+name + "&arg=" + newName);
+            return retrieveAndParse("key/rename?arg=" + name + "&arg=" + newName);
         }
 
         public List<KeyInfo> rm(String name) throws IOException {
-            return ((List<Object>)((Map)retrieveAndParse("key/rm?arg=" + name)).get("Keys"))
-                    .stream()
-                    .map(KeyInfo::fromJson)
-                    .collect(Collectors.toList());
+            return ((List<Object>) ((Map) retrieveAndParse("key/rm?arg=" + name)).get("Keys")).stream().map(KeyInfo::fromJson).collect(Collectors.toList());
         }
     }
 
@@ -267,13 +243,12 @@ public class IPFS {
         }
 
         public Object peers(String topic) throws IOException {
-            return retrieveAndParse("pubsub/peers?arg="+topic);
+            return retrieveAndParse("pubsub/peers?arg=" + topic);
         }
 
         /**
-         *
          * @param topic
-         * @param data url encoded data to be published
+         * @param data  url encoded data to be published
          * @return
          * @throws IOException
          */
@@ -294,18 +269,18 @@ public class IPFS {
 
         public Stream<Map<String, Object>> sub(String topic, ForkJoinPool threadSupplier) throws Exception {
             String encodedTopic = Multibase.encode(Multibase.Base.Base64Url, topic.getBytes());
-            return retrieveAndParseStream("pubsub/sub?arg=" + encodedTopic, threadSupplier).map(obj -> (Map)obj);
+            return retrieveAndParseStream("pubsub/sub?arg=" + encodedTopic, threadSupplier).map(obj -> (Map) obj);
         }
 
         /**
          * A synchronous method to subscribe which consumes the calling thread
+         *
          * @param topic
          * @param results
          * @throws IOException
          */
         public void sub(String topic, Consumer<Map<String, Object>> results, Consumer<IOException> error) throws IOException {
-            String encodedTopic = Multibase.encode(Multibase.Base.Base64Url, topic.getBytes());
-            retrieveAndParseStream("pubsub/sub?arg="+encodedTopic, res -> results.accept((Map)res), error);
+            String encodedTopic = Multibase.encode(Multibase.Base.Base64Url, topic.getBytes());retrieveAndParseStream("pubsub/sub?arg=" + encodedTopic, res -> results.accept((Map) res), error);
         }
     }
 
@@ -335,7 +310,7 @@ public class IPFS {
 
         public MerkleNode put(byte[] data, Optional<String> format) throws IOException {
             String fmt = format.map(f -> "&format=" + f).orElse("");
-            Multipart m = new Multipart(protocol +"://" + host + ":" + port + version+"block/put?stream-channels=true" + fmt, "UTF-8");
+            Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "block/put?stream-channels=true" + fmt, "UTF-8");
             try {
                 m.addFilePart("file", Paths.get(""), new NamedStreamable.ByteArrayWrapper(data));
                 String res = m.finish();
@@ -354,7 +329,7 @@ public class IPFS {
      */
     public class IPFSObject {
         public List<MerkleNode> put(List<byte[]> data) throws IOException {
-            Multipart m = new Multipart(protocol +"://" + host + ":" + port + version+"object/put?stream-channels=true", "UTF-8");
+            Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "object/put?stream-channels=true", "UTF-8");
             for (byte[] f : data)
                 m.addFilePart("file", Paths.get(""), new NamedStreamable.ByteArrayWrapper(f));
             String res = m.finish();
@@ -364,7 +339,7 @@ public class IPFS {
         public List<MerkleNode> put(String encoding, List<byte[]> data) throws IOException {
             if (!"json".equals(encoding) && !"protobuf".equals(encoding))
                 throw new IllegalArgumentException("Encoding must be json or protobuf");
-            Multipart m = new Multipart(protocol +"://" + host + ":" + port + version+"object/put?stream-channels=true&encoding="+encoding, "UTF-8");
+            Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "object/put?stream-channels=true&encoding=" + encoding, "UTF-8");
             for (byte[] f : data)
                 m.addFilePart("file", Paths.get(""), new NamedStreamable.ByteArrayWrapper(f));
             String res = m.finish();
@@ -392,33 +367,28 @@ public class IPFS {
 
         public MerkleNode _new(Optional<String> template) throws IOException {
             if (template.isPresent() && !ObjectTemplates.contains(template.get()))
-                throw new IllegalStateException("Unrecognised template: "+template.get());
-            Map json = retrieveMap("object/new?stream-channels=true"+(template.isPresent() ? "&arg=" + template.get() : ""));
+                throw new IllegalStateException("Unrecognised template: " + template.get());
+            Map json = retrieveMap("object/new?stream-channels=true" + (template.isPresent() ? "&arg=" + template.get() : ""));
             return MerkleNode.fromJSON(json);
         }
 
         public MerkleNode patch(Multihash base, String command, Optional<byte[]> data, Optional<String> name, Optional<Multihash> target) throws IOException {
             if (!ObjectPatchTypes.contains(command))
-                throw new IllegalStateException("Illegal Object.patch command type: "+command);
-            String targetPath = "object/patch/"+command+"?arg=" + base.toBase58();
-            if (name.isPresent())
-                targetPath += "&arg=" + name.get();
-            if (target.isPresent())
-                targetPath += "&arg=" + target.get().toBase58();
+                throw new IllegalStateException("Illegal Object.patch command type: " + command);
+            String targetPath = "object/patch/" + command + "?arg=" + base.toBase58();
+            if (name.isPresent()) targetPath += "&arg=" + name.get();
+            if (target.isPresent()) targetPath += "&arg=" + target.get().toBase58();
 
             switch (command) {
                 case "add-link":
-                    if (!target.isPresent())
-                        throw new IllegalStateException("add-link requires name and target!");
+                    if (!target.isPresent()) throw new IllegalStateException("add-link requires name and target!");
                 case "rm-link":
-                    if (!name.isPresent())
-                        throw new IllegalStateException("link name is required!");
+                    if (!name.isPresent()) throw new IllegalStateException("link name is required!");
                     return MerkleNode.fromJSON(retrieveMap(targetPath));
                 case "set-data":
                 case "append-data":
-                    if (!data.isPresent())
-                        throw new IllegalStateException("set-data requires data!");
-                    Multipart m = new Multipart(protocol +"://" + host + ":" + port + version+"object/patch/"+command+"?arg="+base.toBase58()+"&stream-channels=true", "UTF-8");
+                    if (!data.isPresent()) throw new IllegalStateException("set-data requires data!");
+                    Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "object/patch/" + command + "?arg=" + base.toBase58() + "&stream-channels=true", "UTF-8");
                     m.addFilePart("file", Paths.get(""), new NamedStreamable.ByteArrayWrapper(data.get()));
                     String res = m.finish();
                     return MerkleNode.fromJSON(JSONParser.parse(res));
@@ -440,15 +410,13 @@ public class IPFS {
 
         public String resolve(Multihash hash) throws IOException {
             Map res = (Map) retrieveAndParse("name/resolve?arg=" + hash);
-            return (String)res.get("Path");
+            return (String) res.get("Path");
         }
     }
 
     public class DHT {
         public List<Map<String, Object>> findprovs(Multihash hash) throws IOException {
-            return getAndParseStream("dht/findprovs?arg=" + hash).stream()
-                    .map(x -> (Map<String, Object>) x)
-                    .collect(Collectors.toList());
+            return getAndParseStream("dht/findprovs?arg=" + hash).stream().map(x -> (Map<String, Object>) x).collect(Collectors.toList());
         }
 
         public Map query(Multihash peerId) throws IOException {
@@ -464,7 +432,7 @@ public class IPFS {
         }
 
         public Map put(String key, String value) throws IOException {
-            return retrieveMap("dht/put?arg=" + key + "&arg="+value);
+            return retrieveMap("dht/put?arg=" + key + "&arg=" + value);
         }
     }
 
@@ -477,15 +445,13 @@ public class IPFS {
     // Network commands
 
     public List<MultiAddress> bootstrap() throws IOException {
-        return ((List<String>)retrieveMap("bootstrap/").get("Peers"))
-                .stream()
-                .flatMap(x -> {
-                    try {
-                        return Stream.of(new MultiAddress(x));
-                    } catch (Exception e) {
-                        return Stream.empty();
-                    }
-                }).collect(Collectors.toList());
+        return ((List<String>) retrieveMap("bootstrap/").get("Peers")).stream().flatMap(x -> {
+            try {
+                return Stream.of(new MultiAddress(x));
+            } catch (Exception e) {
+                return Stream.empty();
+            }
+        }).collect(Collectors.toList());
     }
 
     public class Bootstrap {
@@ -494,7 +460,8 @@ public class IPFS {
         }
 
         public List<MultiAddress> add(MultiAddress addr) throws IOException {
-            return ((List<String>)retrieveMap("bootstrap/add?arg="+addr).get("Peers")).stream().map(x -> new MultiAddress(x)).collect(Collectors.toList());
+            final List<String> peers = (List<String>) retrieveMap("bootstrap/add?arg=" + addr).get("Peers");
+            return peers.stream().map(MultiAddress::new).toList();
         }
 
         public List<MultiAddress> rm(MultiAddress addr) throws IOException {
@@ -502,7 +469,7 @@ public class IPFS {
         }
 
         public List<MultiAddress> rm(MultiAddress addr, boolean all) throws IOException {
-            return ((List<String>)retrieveMap("bootstrap/rm?"+(all ? "all=true&":"")+"arg="+addr).get("Peers")).stream().map(x -> new MultiAddress(x)).collect(Collectors.toList());
+            return ((List<String>) retrieveMap("bootstrap/rm?" + (all ? "all=true&" : "") + "arg=" + addr).get("Peers")).stream().map(MultiAddress::new).toList();
         }
     }
 
@@ -512,37 +479,22 @@ public class IPFS {
      */
     public class Swarm {
         public List<Peer> peers() throws IOException {
-            Map m = retrieveMap("swarm/peers?stream-channels=true");
-            return ((List<Object>)m.get("Peers")).stream()
-                    .flatMap(json -> {
-                        try {
-                            return Stream.of(Peer.fromJSON(json));
-                        } catch (Exception e) {
-                            return Stream.empty();
-                        }
-                    }).collect(Collectors.toList());
+            Map<?, ?> m = retrieveMap("swarm/peers?stream-channels=true");
+            return mapper.convertValue(m.get("Peers"), new TypeReference<>() {
+            });
         }
 
         public Map<Multihash, List<MultiAddress>> addrs() throws IOException {
             Map m = retrieveMap("swarm/addrs?stream-channels=true");
-            return ((Map<String, Object>)m.get("Addrs")).entrySet()
-                    .stream()
-                    .collect(Collectors.toMap(
-                            e -> Multihash.fromBase58(e.getKey()),
-                            e -> ((List<String>)e.getValue())
-                                    .stream()
-                                    .map(MultiAddress::new)
-                                    .collect(Collectors.toList())));
+            return ((Map<String, Object>) m.get("Addrs")).entrySet().stream().collect(Collectors.toMap(e -> Multihash.fromBase58(e.getKey()), e -> ((List<String>) e.getValue()).stream().map(MultiAddress::new).toList()));
         }
 
-        public Map connect(MultiAddress multiAddr) throws IOException {
-            Map m = retrieveMap("swarm/connect?arg="+multiAddr);
-            return m;
+        public Map<String, Object> connect(MultiAddress multiAddr) throws IOException {
+            return retrieveMap("swarm/connect?arg=" + multiAddr);
         }
 
-        public Map disconnect(MultiAddress multiAddr) throws IOException {
-            Map m = retrieveMap("swarm/disconnect?arg="+multiAddr);
-            return m;
+        public Map<String, Object> disconnect(MultiAddress multiAddr) throws IOException {
+            return retrieveMap("swarm/disconnect?arg=" + multiAddr);
         }
     }
 
@@ -602,11 +554,11 @@ public class IPFS {
 
     // Tools
     public String version() throws IOException {
-        Map m = (Map)retrieveAndParse("version");
-        return (String)m.get("Version");
+        Map<String, Object> m = retrieveMap("version");
+        return (String) m.get("Version");
     }
 
-    public Map commands() throws IOException {
+    public Map<String, Object> commands() throws IOException {
         return retrieveMap("commands");
     }
 
@@ -616,17 +568,17 @@ public class IPFS {
 
     public class Config {
         public Map show() throws IOException {
-            return (Map)retrieveAndParse("config/show");
+            return (Map) retrieveAndParse("config/show");
         }
 
         public void replace(NamedStreamable file) throws IOException {
-            Multipart m = new Multipart(protocol +"://" + host + ":" + port + version+"config/replace?stream-channels=true", "UTF-8");
+            Multipart m = new Multipart(protocol + "://" + host + ":" + port + version + "config/replace?stream-channels=true", "UTF-8");
             m.addFilePart("file", Paths.get(""), file);
             String res = m.finish();
         }
 
         public Object get(String key) throws IOException {
-            Map m = (Map)retrieveAndParse("config?arg="+key);
+            Map m = (Map) retrieveAndParse("config?arg=" + key);
             return m.get("Value");
         }
 
@@ -649,8 +601,11 @@ public class IPFS {
         }
     }
 
-    private Map retrieveMap(String path) throws IOException {
-        return (Map)retrieveAndParse(path);
+    private Map<String, Object> retrieveMap(String path) throws IOException {
+        final byte[] res = retrieve(path);
+        final TypeReference<Map<String, Object>> typeRef = new TypeReference<>() {
+        };
+        return mapper.readValue(res, typeRef);
     }
 
     private Object retrieveAndParse(String path) throws IOException {
@@ -661,27 +616,25 @@ public class IPFS {
     private Stream<Object> retrieveAndParseStream(String path, ForkJoinPool executor) throws IOException {
         BlockingQueue<CompletableFuture<byte[]>> results = new LinkedBlockingQueue<>();
         InputStream in = retrieveStream(path);
-        executor.submit(() -> getObjectStream(in,
-                res -> {
-                    results.add(CompletableFuture.completedFuture(res));
-                },
-                err -> {
-                    CompletableFuture<byte[]> fut = new CompletableFuture<>();
-                    fut.completeExceptionally(err);
-                    results.add(fut);
-                })
-        );
+        executor.submit(() -> getObjectStream(in, res -> {
+            results.add(CompletableFuture.completedFuture(res));
+        }, err -> {
+            CompletableFuture<byte[]> fut = new CompletableFuture<>();
+            fut.completeExceptionally(err);
+            results.add(fut);
+        }));
         return Stream.generate(() -> {
             try {
                 return JSONParser.parse(new String(results.take().get()));
             } catch (Exception e) {
-                throw new RuntimeException(e);
+                throw new IllegalStateException(e);
             }
         });
     }
 
     /**
      * A synchronous stream retriever that consumes the calling thread
+     *
      * @param path
      * @param results
      * @throws IOException
@@ -728,11 +681,10 @@ public class IPFS {
 
             byte[] buf = new byte[4096];
             int r;
-            while ((r = in.read(buf)) >= 0)
-                resp.write(buf, 0, r);
+            while ((r = in.read(buf)) >= 0) resp.write(buf, 0, r);
             return resp.toByteArray();
         } catch (ConnectException e) {
-            throw new RuntimeException("Couldn't connect to IPFS daemon at "+target+"\n Is IPFS running?");
+            throw new IllegalStateException("Couldn't connect to IPFS daemon at " + target + "\n Is IPFS running?");
         } catch (IOException e) {
             throw extractError(e, conn);
         }
@@ -741,11 +693,11 @@ public class IPFS {
     public static RuntimeException extractError(IOException e, HttpURLConnection conn) {
         InputStream errorStream = conn.getErrorStream();
         String err = errorStream == null ? e.getMessage() : new String(readFully(errorStream));
-        return new RuntimeException("IOException contacting IPFS daemon.\n"+err+"\nTrailer: " + conn.getHeaderFields().get("Trailer"), e);
+        return new IllegalStateException("IOException contacting IPFS daemon.\n" + err + "\nTrailer: " + conn.getHeaderFields().get("Trailer"), e);
     }
 
     private void getObjectStream(InputStream in, Consumer<byte[]> processor, Consumer<IOException> error) {
-        byte LINE_FEED = (byte)10;
+        byte LINE_FEED = (byte) 10;
 
         try {
             ByteArrayOutputStream resp = new ByteArrayOutputStream();
@@ -766,7 +718,7 @@ public class IPFS {
 
     private List<Object> getAndParseStream(String path) throws IOException {
         InputStream in = retrieveStream(path);
-        byte LINE_FEED = (byte)10;
+        byte LINE_FEED = (byte) 10;
 
         ByteArrayOutputStream resp = new ByteArrayOutputStream();
 
@@ -804,7 +756,7 @@ public class IPFS {
 
     private static byte[] post(URL target, byte[] body, Map<String, String> headers, int connectTimeoutMillis, int readTimeoutMillis) throws IOException {
         HttpURLConnection conn = configureConnection(target, "POST", connectTimeoutMillis, readTimeoutMillis);
-        for (String key: headers.keySet())
+        for (String key : headers.keySet())
             conn.setRequestProperty(key, headers.get(key));
         conn.setDoOutput(true);
         OutputStream out = conn.getOutputStream();
@@ -825,11 +777,10 @@ public class IPFS {
             ByteArrayOutputStream resp = new ByteArrayOutputStream();
             byte[] buf = new byte[4096];
             int r;
-            while ((r=in.read(buf)) >= 0)
-                resp.write(buf, 0, r);
+            while ((r = in.read(buf)) >= 0) resp.write(buf, 0, r);
             return resp.toByteArray();
-            
-        } catch(IOException ex) {
+
+        } catch (IOException ex) {
             throw new RuntimeException("Error reading InputStrean", ex);
         }
     }
@@ -837,7 +788,7 @@ public class IPFS {
     private static boolean detectSSL(MultiAddress multiaddress) {
         return multiaddress.toString().contains("/https");
     }
-    
+
     private static HttpURLConnection configureConnection(URL target, String method, int connectTimeoutMillis, int readTimeoutMillis) throws IOException {
         HttpURLConnection conn = (HttpURLConnection) target.openConnection();
         conn.setRequestMethod(method);
